// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ElementsProviderCheckout/> renders Error when clientSecret is null 1`] = `
<DocumentFragment>
  <div
    class="errorWrapper"
  >
    <div
      class="errorContainer"
    >
      <div
        class="errorText"
      >
        error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ElementsProviderCheckout/> renders Loading when options are undefined 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="lds-ellipsis"
    role="alert"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`<ElementsProviderCheckout/> renders payment form when clientSecret is present 1`] = `
<DocumentFragment>
  <div
    class="checkoutFormBackground"
  >
    <div
      class="header"
    >
       Subscription
    </div>
    <div
      class="price"
    >
      $undefined / mo
    </div>
    <div
      class="paymentFormContainer"
    >
      <form
        class="paymentForm"
        name="payment-form"
      >
        <div
          class="paymentElementcontainer"
        >
          <div
            class="nameAndEmailInputsContainer"
          >
            <div
              class="nameAndEmailInputs"
            >
              <div
                class="nameInput"
              >
                <div
                  class="label"
                >
                  Name
                </div>
                <input
                  class="stripeStyledInput"
                />
              </div>
              <div
                class="emailInput"
              >
                <div
                  class="label"
                >
                  Email
                </div>
                <input
                  class="stripeStyledInput"
                />
              </div>
            </div>
          </div>
          <div />
        </div>
        <button
          class="submitButton"
        >
          Submit Payment
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
